--- a/package.json
+++ b/package.json
@@ -1,31 +1,29 @@
 {
-  "name": "nuxt-download",
+  "name": "worker-download",
   "version": "0.0.1",
-  "description": "A lightweight, threaded resource download plugin for Nuxt.js leveraging web workers",
+  "description": "A lightweight, threaded resource download helper leveraging web workers",
   "keywords": [
     "Webworkers",
-    "nuxt",
     "content",
     "images",
-    "download",
-    "nuxt.js"
+    "download"
+  ],
+  "files": [
+    "/dist",
+    "/workers"
   ],
   "license": "MIT",
   "author": "Alex Patin",
   "main": "dist/index.js",
   "scripts": {
-    "clean": "./node_modules/.bin/rimraf dist",
-    "build": "yarn clean && yarn build:module && yarn build:worker",
-    "build:module": "tsc",
-    "build:worker": "webpack",
+    "clean": "./node_modules/.bin/rimraf dist workers",
+    "build": "yarn clean && webpack",
     "lint": "./node_modules/.bin/eslint --fix .",
     "pub": "yarn lint && yarn build && npm publish"
   },
   "dependencies": {},
   "devDependencies": {
-    "@nuxt/types": "^2.15.8",
     "@types/node": "^17.0.22",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
     "eslint": "^8.11.0",
     "eslint-config-thealexpatin": "^0.1.10",
     "prettier": "^2.6.0",
@@ -35,7 +33,6 @@
     "ts-loader": "^9.2.8",
     "typescript": "4.1.3",
     "typescript-transform-paths": "^3.3.1",
-    "vue": "^3.2.31",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   }
