--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "4.1.3",
     "typescript-transform-paths": "^3.3.1",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "worker-loader": "^3.0.8"
   }
 }
