--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {},
   "devDependencies": {
     "@types/node": "^17.0.22",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^8.11.0",
     "eslint-config-thealexpatin": "^0.1.10",
     "prettier": "^2.6.0",
