--- a/.eslintignore
+++ b/.eslintignore
@@ -6,5 +6,6 @@ package-lock.json
 
 # don't lint build output (make sure it's set to your correct build folder name)
 dist
+workers
 
 webpack.config.js
