--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
   ],
   "license": "MIT",
   "author": "Alex Patin",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/theAlexPatin/worker-download.git"
+  },
+  "bugs": {
+    "url": "https://github.com/theAlexPatin/worker-download/issues"
+  },
+  "homepage": "https://github.com/theAlexPatin/worker-download",
   "main": "dist/index.js",
   "scripts": {
     "clean": "./node_modules/.bin/rimraf dist workers",
